# hermes-agent-windows-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  start.bat  stop.bat
crates/agent/: Cargo.toml
crates/agent/src/: auxiliary_client.rs  chat.rs  compression.rs  error_classifier.rs  interrupt.rs  iteration.rs  lib.rs  memory.rs  memory_nudge.rs  prompt_builder.rs  retry_utils.rs  skill_commands.rs  tools.json
crates/agent/src/tools/: approval.rs  browser.rs  code_exec.rs  cron.rs  mcp_client.rs  mod.rs  patch.rs  process_registry.rs  search.rs  skill_manager.rs  todo.rs  web.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  providers.rs  schema.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config_ext_handlers.rs  handlers.rs  lib.rs  logging.rs  session.rs  session_router.rs
crates/session/: Cargo.toml
crates/session/src/: db.rs  lib.rs  search.rs
crates/tool-registry/: Cargo.toml
crates/tool-registry/src/: lib.rs  registry.rs
crates/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/ui/src/: App.tsx  api.ts  styles.css
crates/ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ui/src-tauri/capabilities/: default.json
crates/ui/src-tauri/icons/: icon.icns
crates/ui/src-tauri/src/: main.rs
crates/ui/src/components/: CommandPalette.tsx  FileTree.tsx  MarkdownRenderer.tsx  ToolCallCard.tsx  WorkspaceLayout.tsx
crates/ui/src/pages/: ChatPage.tsx  DashboardPage.tsx  FilesPage.tsx  HUDPage.tsx  InspectorPage.tsx  MemoryPage.tsx  SettingsPage.tsx  SkillsPage.tsx  TerminalPage.tsx
crates/utils/: Cargo.toml
crates/utils/src/: agent_log.rs  error.rs  lib.rs  path.rs
docs/: FEATURE_GAP_ANALYSIS.md
