[workspace]
resolver = "2"
members = [
    "crates/agent",
    "crates/tool-registry",
    "crates/session",
    "crates/config",
    "crates/gateway",
    "crates/cli",
    "crates/utils",
    # "crates/ui/src-tauri",
]

[workspace.package]
version = "0.6.2"
edition = "2021"
authors = ["Nous Research"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "stream"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
process-wrap = { version = "9", features = ["tokio1"] }
oauth2 = "5.0"
ratatui = "0.30"
crossterm = "0.28"
config = "0.14"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
dotenvy = "0.15"
tera = "1"
sha2 = "0.10"
base64 = "0.22"
