[package]
name = "hermes-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
config.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
serde_yaml = "0.9"
