[package]
name = "hermes-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "trace", "fs"] }
base64.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tokio-tungstenite.workspace = true
futures-util.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
oauth2.workspace = true
dirs.workspace = true
serde_yaml = "0.9"
sha2 = "0.10"
    hermes-session = { path = "../session" }
    hermes-agent = { path = "../agent" }
    hermes-config = { path = "../config" }
    hermes-utils = { path = "../utils" }
