[package]
name = "hermes-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
