[package]
name = "hermes-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
base64.workspace = true
