[package]
name = "hermes-ui-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
tokio.workspace = true
